log
Wed May 20 11:27:03 AM UTC 2026: 
 treemap.c | 9 +++++++--
 1 file changed, 7 insertions(+), 2 deletions(-)
 tests:  4|7
total_score: 5/60
4525c36
Wed May 20 11:31:40 AM UTC 2026: 
 treemap.c | 14 ++++++++++++++
 1 file changed, 14 insertions(+)
 tests:  11|6
total_score: 15/60
5732e05
Wed May 20 11:36:30 AM UTC 2026: 
 treemap.c | 34 ++++++++++++++++++++++++++++++++++
 1 file changed, 34 insertions(+)
 tests:  13|5
total_score: 25/60
ec64a6b
Wed May 20 11:42:39 AM UTC 2026: 
 treemap.c | 49 +++++++++++++++++++++++++++++++++++++++++++++++--
 1 file changed, 47 insertions(+), 2 deletions(-)
Compilation failed
In file included from test.c:4:
treemap.c: In function ‘removeNode’:
treemap.c:180:25: error: implicit declaration of function ‘minium’; did you mean ‘minimum’? [-Wimplicit-function-declaration]
  180 |         TreeNode* min = minium(node->right);
      |                         ^~~~~~
      |                         minimum
treemap.c:180:25: error: initialization of ‘TreeNode *’ from ‘int’ makes pointer from integer without a cast [-Wint-conversion]
753a47e
Wed May 20 11:43:00 AM UTC 2026: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  18|3
total_score: 35/60
d8903eb
Wed May 20 11:46:40 AM UTC 2026: 
 treemap.c | 21 +++++++++++++++++++--
 1 file changed, 19 insertions(+), 2 deletions(-)
 tests:  25|1
total_score: 50/60
505396b
